kubeflow/notebooks/jupyter-web-app/istio-resources-cloud/jupyterwebapp-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jupyter-web-app-jupyter-web-app-cloud
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway-cloud
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /jupyter
    match:
    - uri:
        prefix: /jupyter/
    rewrite:
      uri: /
    route:
    - destination:
        host: jupyter-web-app-service.kubeflow.svc.cluster.local
        port:
          number: 80
